...
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tvRestaurantType"
            app:layout_constraintTop_toBottomOf="@id/tvRestaurantType"
            tools:text="Taj Mahal" />

        <TextView
            android:id="@+id/numberRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/grey"
            android:textSize="24dp"
            app:layout_constraintBottom_toTopOf="@+id/ratingBar"
...
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="@+id/numberRating"
            app:layout_constraintTop_toBottomOf="@+id/numberRating" />


        <TextView
            android:id="@+id/numberTotalRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="(245)"
            app:layout_constraintBottom_toTopOf="@+id/separator"
            app:layout_constraintEnd_toEndOf="@+id/numberRating"
...
            android:src="@drawable/baseline_arrow_forward_12"
            app:layout_constraintBottom_toBottomOf="@id/tvRestaurantPhoneNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvRestaurantPhoneNumber" />

        <Button
            android:id="@+id/buttonLetRating"
            android:layout_width="158dp"
            android:layout_height="36dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="-5dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
...
